--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "url": "https://github.com/OpenEnergyTools/scl-diff.git"
   },
   "scripts": {
-    "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
-    "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
+    "lint": "eslint --ext .ts,.html . && prettier \"**/*.ts\" --check ",
+    "format": "eslint --ext .ts,.html . --fix && prettier \"**/*.ts\" --write",
     "test": "wtr --coverage",
     "test:watch": "wtr --watch --coverage",
     "doc": "npx rimraf doc && typedoc --out doc describe.ts",
@@ -25,15 +25,32 @@
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@web/dev-server-esbuild": "^0.4.1",
     "@web/test-runner": "^0.16.1",
     "chai": "npm:@esm-bundle/chai@^4.3.4-fix.0",
     "concurrently": "^8.0.1",
     "eslint": "^8.40.0",
     "gh-pages": "^5.0.0",
+    "prettier": "^3.2.5",
     "typedoc": "^0.24.7",
     "typescript": "^5.0.4"
+  },
+  "eslintConfig": {
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended-type-checked",
+      "plugin:@typescript-eslint/stylistic-type-checked"
+    ],
+    "parserOptions": {
+      "project": true,
+      "tsconfigRootDir": "."
+    },
+    "root": true
   }
 }
