--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,7 @@
     "sourceMap": true,
     "declaration": true,
     "outDir": "dist",
-    "rootDir": "./",
+    "rootDir": "./"
   },
-  "files": [
-    "./describe.ts",
-  ],
+  "include": ["**/*.ts"]
 }
